draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
/* ... */
.rowBelowSeparatorInnerContent {
  display: flex;
  width: 100%;
  margin-top: -$title-block-separator-height;
  justify-content: space-between;
}

.titleAndAdjacent {
  display: flex;
}

.titleAndAdjacentNotBreadcrumb {
  display: flex;
  transition: opacity 0.3s ease;

  .breadcrumb:hover + &,
  .breadcrumb:focus + & {
    opacity: 0;

    @include title-block-under-1645 {
      left: $breadcrumb-circle-width + 12px;
      transform: translateY(2px);
      position: absolute;
    }

    @include title-block-under-1366 {
      transform: translateY(4px);

      .hasSubtitle & {
        transform: translateY(-4px);
      }
    }
  }
}

.tag {
  @include ca-margin($start: $ca-grid / 2);
  display: flex;
  align-items: center;

  @include title-block-medium-and-small {
    display: none;
  }
}

.navigationTabsContainer {
  display: flex;
  height: $tab-container-height-default;

  @include title-block-small {
    height: $tab-container-height-small;
  }
}

.navigationTabScrollerContainer {
  @include title-block-small {
    display: none;
    overflow-x: scroll;
    scrollbar-width: none;
    width: 100vw;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  .hasNavigationTabs & {
    @include title-block-small {
      display: block;
    }
  }
}

.navigationTabEdgeShadow {
  display: none;
  pointer-events: none;

  @include title-block-small {
    display: block;
    position: absolute;
    top: 63px;
    width: $ca-grid * 2;
    height: $tab-container-height-small;
    background: linear-gradient(
      0,
      $kz-color-wisteria-700,
      rgba($kz-color-wisteria-700, 0)
    );
    z-index: $ca-z-index-sticky;
  }

  .adminVariant & {
    @include title-block-small {
      background: linear-gradient(0, $kz-color-stone, rgba($kz-color-stone, 0));
    }
  }

  .educationVariant & {
    @include title-block-small {
      background: linear-gradient(
        0,
        $kz-color-cluny-200,
        rgba($kz-color-cluny-200, 0)
      );
    }
  }
}

.navigationTabEdgeShadowLeft {
  composes: navigationTabEdgeShadow;
  transform: rotate(90deg);
  left: 0;
}

.navigationTabEdgeShadowRight {
  composes: navigationTabEdgeShadow;
  transform: rotate(-90deg);
  right: 0;
}

.mainActionsContainer {
  display: flex;
  align-items: center;
  @include ca-margin($start: $ca-grid / 2);

  @include title-block-small {
    display: none;
  }
}

.secondaryActionsContainer {
  display: flex;
  align-items: flex-start;
  padding: ($ca-grid / 2) 0;
  @include ca-margin($start: $ca-grid * 1.5);
  flex-shrink: 0;

  // To be removed eventually – the Dropdown does not
  // currently set its own color, and we want it
  // to be Cluny like the default secondary buttons
  .educationVariant &,
  .adminVariant & {
    color: $kz-color-cluny-500;
  }

  @include title-block-medium-and-small {
    display: none;
  }
}

.breadcrumb {
  display: flex;
  position: absolute;
  z-index: $ca-z-index-sticky;
  align-items: center;
  top: 50%;
  transform: translateY(-50%);
  @include ca-position(
    $start: calc(-#{$breadcrumb-circle-width} - #{$ca-grid})
  );
  align-self: normal;
  color: $kz-color-white;

  .educationVariant &,
  .adminVariant & {
    color: $kz-color-wisteria-800;
  }

  &:hover {
    text-decoration: none;
  }

  @media only screen and (max-width: $breadcrumb-breakpoint-width) {
    position: relative;
    @include ca-margin($end: $ca-grid / 2);
    @include ca-position($start: 0);
    transform: translateY(0);
  }

  @include title-block-medium-and-small {
    display: none;
  }
}

.breadcrumbText {
  top: 0;
  display: none;
  @include ca-margin($start: $ca-grid);
  white-space: nowrap;
  font-family: $kz-typography-heading-5-font-family;
  font-weight: $kz-typography-heading-5-font-weight;
  font-size: $kz-typography-heading-5-font-size;
  line-height: $kz-typography-heading-5-line-height;
  letter-spacing: $kz-typography-heading-5-letter-spacing;

  .breadcrumb:hover &,
  .breadcrumb:focus & {
    display: inline-block;
    max-width: 200px;
    animation: slide-fade 0.4s;

    [dir="rtl"] & {
      animation: reverse-slide-fade 0.4s;
    }
  }

  &:hover {
    text-decoration: underline;
  }
}

.circle {
  $border-width: 3px;
  flex: 0 0 $breadcrumb-circle-width;
  box-sizing: border-box;
  width: $breadcrumb-circle-width;
  height: $breadcrumb-circle-width;
  color: $kz-color-white;
  border-color: rgba($kz-color-white, 0.5);
  border-width: 2px;
  border-radius: 50%;
  border-style: solid;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 0.3s ease, transform 0.3s ease;

  .breadcrumb:hover &,
  .breadcrumb:focus & {
    transform: scale(1.1);
    border-color: $kz-color-white;
    color: $kz-color-white;
    background-color: rgba($kz-color-white, 0.1);
  }

  .educationVariant &,
  .adminVariant & {
    color: $kz-color-cluny-500;
    border-color: $kz-color-cluny-300;
    border-width: $border-width;
  }

  .educationVariant .breadcrumb:hover &,
  .educationVariant .breadcrumb:focus &,
  .adminVariant .breadcrumb:hover &,
  .adminVariant .breadcrumb:focus & {
    border-color: $kz-color-cluny-500;
    color: $kz-color-cluny-500;
    background-color: rgba($kz-color-cluny-500, 0.1);
  }
}

@keyframes slide-fade {
  0% {
    display: none;
    opacity: 0;
  }
  1% {
    display: block;
    opacity: 0;
    transform: translateX(-30px);
  }
  100% {
    opacity: 1;
    transform: translateX(0px);
  }
}

@keyframes reverse-slide-fade {
  0% {
    display: none;
    opacity: 0;
  }
  1% {
    display: block;
    opacity: 0;
    transform: translateX(30px);
  }
  100% {
    opacity: 1;
    transform: translateX(0px);
  }
}

